--- a/fabioif.com.CompanyManager/CompanyManager.MVC/Views/Login/Index.cshtml
+++ b/fabioif.com.CompanyManager/CompanyManager.MVC/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model CompanyManager.MVC.ViewModels.LoginViewModel
+
 @{
     Layout = null;
 }
@@ -25,6 +26,7 @@
             <div class="col-md-12">
                 @using (Html.BeginForm("Login", "Login", System.Web.Mvc.FormMethod.Post, new { @class = "text-center" }))
                 { 
+                    @Html.AntiForgeryToken()
                     <div class="form-group">
                         @Html.LabelFor(l => l.Email)
                         @Html.TextBoxFor(t => t.Email, new { @class = "form-control" })
